--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,16 @@
 ---
 layout: default
 ---
-<header class="masthead">
-  <h1 class="masthead-title--small">
-    <a href="{{ site.baseurl }}/">{{ site.name }}</a>
+<header class="masthead">        
+  <h1 class="masthead-title">
+    <a href="{{ site.baseurl }}/">{{ site.name }}<span>wood</span></a>
   </h1>
-</header>      
+  <nav class="masthead-nav">
+    {% for nav in site.nav %}
+    <a href="{{ nav.href }}">{{ nav.name }}</a>
+    {% endfor %}
+  </nav>
+</header>   
 <div class="content post">
   <h1 class="post-title">{{ page.title }}</h1>
   <div class="post-date">
